--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ BugReports: https://github.com/sbgraves237/MaddisonData/issues
 Depends: 
     R (>= 4.1)
 Suggests: 
+    ggplot2, 
     ipumsr,
     knitr,
     lubridate,
