--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,13 +6,17 @@ Authors@R:
     person("Spencer", "Graves", , "spencer.graves@effectivedefense.org", 
            role = c("aut", "cre"),
            comment = c(ORCID = "0009-0005-5387-729X"))
-Description: Relatively easy access is provided to Maddison project data, which 
-      collates all the credible data on population and GDP for 169 countries, 
-      with some dating back to the year 1. 'MaddisonLeaders' makes it easy to 
-      find the leaders for each year, allowing users to delete countries like 
-      OPEC with narrow economies to focus on the technology leaders. 
-      'ggplotPath' makes it easy to plot data for only selected countries or 
-      years. 
+Description: Relatively easy access is provided to 2023 version of the Maddison 
+      project data downloaded 2025-08-28. This project collates all the 
+      credible data on population and GDP for 169 countries, with some dating 
+      back to the year 1 of the current era. The 'MaddisonLeaders' function 
+      makes it easy to find the leaders for each year, allowing users to 
+      delete countries like OPEC with narrow economies to focus on technology 
+      leaders. 'ggplotPath' makes it easy to plot data for only selected 
+      countries or years. The 'MaddisonSources' function makes it relatively 
+      easy to obtain references to the original sources, which must be cited 
+      per the copyright rules of the Maddison Project for different uses of 
+      their data. 
 License: MIT + file LICENSE
 URL: https://github.com/sbgraves237/MaddisonData
 BugReports: https://github.com/sbgraves237/MaddisonData/issues
