--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: MaddisonData
 Title: Maddison Project Data
 Version: 1.0.3
-Date: 2026-01-08
+Date: 2026-01-09
 Authors@R: 
     person("Spencer", "Graves", , "spencer.graves@effectivedefense.org", 
            role = c("aut", "cre"),
@@ -9,14 +9,13 @@ Authors@R:
 Description: Relatively easy access is provided to 2023 version of the Maddison 
       project data downloaded 2025-08-28. This project collates all the 
       credible data on population and GDP for 169 countries, with some dating 
-      back to the year 1 of the current era. The MaddisonLeaders function 
-      makes it easy to find the leaders for each year, allowing users to 
-      delete countries like OPEC with narrow economies to focus on technology 
-      leaders. ggplotPath makes it easy to plot data for only selected 
-      countries or years. The MaddisonSources function makes it relatively 
-      easy to obtain references to the original sources, which must be cited 
-      per the copyright rules of the Maddison Project for different uses of 
-      their data. 
+      back to the year 1 of the current era. One function makes it easy to find 
+      the leaders for each year, allowing users to delete countries like OPEC 
+      with narrow economies to focus on technology leaders. Another function 
+      makes it easy to plot data for only selected countries or years. Another 
+      function makes it relatively easy to obtain references to the original 
+      sources, which must be cited per the copyright rules of the Maddison 
+      Project for different uses of their data. 
 License: MIT + file LICENSE
 URL: https://github.com/sbgraves237/MaddisonData
 BugReports: https://github.com/sbgraves237/MaddisonData/issues
