--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(MadDateRanges)
 export(MaddisonLeaders)
 export(getMaddisonSources)
 export(ggplotPath)
+export(growthModel)
 export(logMaddison)
 export(path_package2)
 export(yr)
